# Pacru

./: .gitignore  Board.cpp  Board.hpp  CMakeLists.txt  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  README.txt  globals.hpp  main.cpp
resources/: .~lock.plan.docx#  PacroBoard-draw.io.drawio  PacruBoard-details  States.drawio  boardBlank-details  plan.docx  screenSetup-draw.io.drawio
